# paseo

./: .gitignore  README.md  package.yaml  paseo.cabal  stack.yaml
app/: Main.hs  Spider.hs  devel.hs
config/: keter.yml  routes  settings.yml  test-settings.yml
config/models/: scan
src/: Application.hs  Foundation.hs  Model.hs  Paseo.hs  Queries.hs  Settings.hs  Spider.hs  Web.hs
src/Handler/: Home.hs  Scans.hs  Validate.hs  WFind.hs
src/Paseo/: Spider.hs  WFind.hs  Web.hs
src/Paseo/Common/: Handler.hs
src/Paseo/Spider/: VnuValidation.hs
src/Paseo/Web/: App.hs  Db.hs  Forms.hs  Types.hs  Views.hs
templates/: default-layout.hamlet  default-layout.lucius  homepage.hamlet
templates/scans/: detail.hamlet  list.hamlet  page-detail.hamlet
test/Handler/: HomeSpec.hs  ScanSpec.hs
