name:                paseo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kitdallege/paseo#readme
license:             BSD3
license-file:        LICENSE
author:              Kit Dallege
maintainer:          kitdallege@gmail.com
copyright:           Copyright: (c) 2016 Kit Dallege
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable paseo
  hs-source-dirs:      src
  main-is:             Spider.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base >= 4.7 && < 5
                     , charlotte
                     , aeson
                     , bytestring
                     , containers
                     , network-uri
                     , sqlite-simple
                     , time
                     , tagsoup
                     , tagsoup-selection

executable paseo-ui
 hs-source-dirs:      src
 main-is:             Web.hs
 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
 build-depends:       base >= 4.7 && < 5
                    , aeson
                    , blaze-html
                    , bytestring
                    , containers
                    , directory
                    , filepath
                    , http-types
                    , mtl
                    , network-uri
                    , scotty
                    , sqlite-simple
                    , text
                    , time
                    , wai
                    , wai-extra
